[tool.poetry]
name = "rec-engine"
version = "0.1.0"
description = ""
authors = ["Ulian <falivith@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.6.1"
numpy = "^2.2.3"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
